--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   color: white;
   font-family: 'General sans', sans-serif;
   scroll-behavior: smooth;
+
   a {
     transition: 0.3s ease-in-out !important;
   }
@@ -55,10 +56,44 @@ body {
   transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
+.loader {
+  display: flex;
+  gap: 3px;
+}
+
+.loader span {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: #1e1e1e;
+  border-radius: 50%;
+  animation: bounce 0.6s infinite alternate;
+}
+
+.loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-8px);
+  }
+}
+
+
 @keyframes anima {
   0% {
     transform: translateY(100vh) scale(0) rotate(0deg);
   }
+
   100% {
     transform: translateY(-10vh) scale(1) rotate(360deg);
   }
