--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,18 +87,22 @@ body {
   animation: fade-up 1s ease-in-out forwards;
 }
 
-#sobre {
+.fade-down {
+  opacity: 0;
+  animation: fade-down 1s ease-in-out forwards;
+}
+
+.fade-left {
   opacity: 0;
   animation: fade-left 1s ease-in-out forwards;
 }
 
-#sobre-img {
+.fade-right {
   opacity: 0;
   animation: fade-right 1s ease-in-out forwards;
 }
 
-#projetos,
-#posts {
+.fade-in-effect {
   animation: fade-in 0.5s ease-in-out forwards;
 }
 
@@ -106,14 +110,6 @@ body {
   height: fit-content;
   position: sticky;
   top: 0;
-}
-
-#contato-texto {
-  animation: fade-left 0.5s ease-in-out forwards;
-}
-
-#form {
-  animation: fade-in 0.4s ease-in-out forwards;
 }
 
 .hover\:glow:hover {
@@ -134,6 +130,19 @@ body {
 @keyframes fade-up {
   0% {
     transform: translateY(5px);
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-down {
+  0% {
+    transform: translateY(-155px);
     opacity: 0;
     transition: 0.3s ease-in-out;
   }
